# just-rust-templates

./: .gitignore  README.md  cargo-generate.toml
api/: cargo-generate.toml
api/telegram-bot/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml  config.Development.json  config.Production.json  config.json  local.env
api/telegram-bot/src/: config.rs  main.rs
api/telegram-bot/src/api/: cfg.rs  error.rs  mod.rs
api/telegram-bot/src/api/system/: handlers.rs  mod.rs  models.rs  routes.rs
api/telegram-bot/src/app/: mod.rs
api/telegram-bot/src/bot/: cfg.rs  commands.rs  commands_handlers.rs  dialogue.rs  message_processor.rs  mod.rs
api/telegram-bot/src/bot/handlers/: user_handlers.rs
api/web-api-warp/: Cargo.toml  README.md  cargo-generate.toml  script-post.rhai  script-task-license.rhai
api/web-api-warp/src/: main.rs
api/web-api-warp/src/api/: mod.rs
api/web-api-warp/src/api/system/: handlers.rs  models.rs
api/web-api-warp/src/app/: mod.rs
