[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
{{description}}
"""
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
teloxide = { version = "0.17.0", features = ["macros", "webhooks-axum"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["full"] }
config = { version = "0.15", features = ["json"] }
serde = "1.0"
serde_json = { version = "1.0" }
uuid = "1.18"
async-trait = "0.1"
dotenvy = { version = "0.15" }
axum = { version = "0.8", optional = true }
url = { version = "2.5" }

# swagger
utoipa = { version = "5.4", features = ["uuid"] }
utoipa-swagger-ui = { version = "9.0" }

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
vendored-openssl = ["openssl"]
