[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
readme = "README.md"
description = """
{{description}}
"""
edition = "2024"

[dependencies]
# telegram integration
teloxide = { version = "0.17.0", features = ["macros", "webhooks-axum"] }

# errors handling
anyhow = { version = "1.0" }

# logging
log = { version = "0.4.29" }
env_logger = { version = "0.11.8" }

# async and web servers
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
axum = { version = "0.8.8", optional = true }
async-trait = { version = "0.1" }
url = { version = "2.5" }

# configurations
config = { version = "0.15", features = ["json"] }
dotenvy = { version = "0.15" }

# serialization
serde = { version = "1.0" }
serde_json = { version = "1.0" }

# types
uuid = { version = "1.19" }

# swagger
utoipa = { version = "5.4", features = ["uuid"] }
utoipa-swagger-ui = { version = "9.0" }

# Use vendored openssl. We don't depend on it directly.
openssl = { version = "0.10", features = ["vendored"], optional = true }
